vest-dsl/test/bad/const_int_value_range.vest
const BAR: u8 = 333
